[package]
name = "pomodoro-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.5.1"
relm4-components = "0.5.1"
gtk = {version = "0.5.5", package  = "gtk4"}
chrono = "0.4.24"
notify-rust = "4"
delay = "0.3.1"
